force-app/main/default/objects/PIF_Clean__c/PIF_Clean__c.object-meta.xml
<CustomObject>
    <label>PIF Clean</label>
    <nameField>
        <displayFormat>PIFCLEAN-{000000}</displayFormat>
        <label>PIF Clean Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PIF Clean</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>