force-app/main/default/objects/PIF_Clean__c/fields/Date_of_birth__c.field-meta.xml
<CustomField>
    <fullName>Date_of_birth__c</fullName>
    <label>Date of birth</label>
    <length>20</length>
    <type>Text</type>
</CustomField>