force-app/main/default/objects/PIF_Clean__c/fields/orders__c.field-meta.xml
<CustomField>
    <fullName>orders__c</fullName>
    <label>orders</label>
    <referenceTo>order__c</referenceTo>
    <relationshipLabel>PIF Clean</relationshipLabel>
    <relationshipName>PIF_Clean</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>