force-app/main/default/objects/PIF_Clean__c/fields/Passport_Country_of_issue__c.field-meta.xml
<CustomField>
    <fullName>Passport_Country_of_issue__c</fullName>
    <label>Passport Country of issue</label>
    <length>100</length>
    <type>Text</type>
</CustomField>