force-app/main/default/objects/PIF_Clean__c/fields/Passport_Expiry_date__c.field-meta.xml
<CustomField>
    <fullName>Passport_Expiry_date__c</fullName>
    <label>Passport Expiry date</label>
    <length>100</length>
    <type>Text</type>
</CustomField>