force-app/main/default/objects/PIF_Clean__c/fields/Phione__c.field-meta.xml
<CustomField>
    <fullName>Phione__c</fullName>
    <label>Phone</label>
    <length>250</length>
    <type>Text</type>
</CustomField>